fixed texts going out of the box

--- a/client/project/src/styles.scss
+++ b/client/project/src/styles.scss
@@ -27,6 +27,7 @@ h3 {
 
 p {
   margin-bottom: 0.75rem;
+  word-wrap: break-word;  
 }
 
 a {
